--- a/libbuddy/index.html
+++ b/libbuddy/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+
+    <link rel="preconnect" href="https://covers.openlibrary.org" crossorigin>
+    <link rel="dns-prefetch" href="https://covers.openlibrary.org">
+
+    <link rel="preconnect" href="https://openlibrary.org">
+    <link rel="dns-prefetch" href="https://openlibrary.org">
+
+    <title>LibBuddy</title>
   </head>
   <body>
     <div id="root"></div>
